--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    /* background-image: url(/img/top-bg.jpg); */
+    background-image: url(../img/top-bg.jpg);
     background-size: cover;
     display: flex;
     align-items: center;
