--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,11 @@
     letter-spacing: 0.5px;
 }
 
+.main-subtitle h2 {
+    font-size: 18px !important;
+}
+
+
 .main-button {
     padding-top: 50px;
     text-transform: uppercase;
@@ -87,3 +92,139 @@
 .img-block img {
     width: 100%;
 }
+
+.review {
+    width: 100%;
+    height: 500px;
+    padding: 200px 0;
+    background-color: #374dafb9;
+}
+
+.title-review {
+    text-align: center;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+.price {
+    width: 100%;
+    padding: 200px 0;
+    background-color: #EEEEEE;
+}
+
+.title-price {
+    text-align: center;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.price-box {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    background-color: #fff;
+    padding: 50px 50px;
+    border-radius: 10px;
+}
+
+@media screen and (max-width: 767px) {
+    .price-box {
+        margin-bottom: 20px;
+    } 
+}
+
+.vip-box {
+    background-color: #374dafb9;
+    color: #fff;
+}
+
+.vip-price {
+    color: rgba(255, 255, 255, 0.534) !important;
+}
+
+.vip-button {
+    background-color: #fff;
+    border-radius: 50px;
+}
+
+.vip-button:hover {
+    background: none;
+    color: #fff;
+}
+
+.price-price {
+    color: gray;
+    text-decoration: line-through;
+    font-size: 18px;
+}
+
+.price-sale {
+    color: red;
+    font-size: 32px;
+}
+
+.vip-sale {
+    color: #fff;
+}
+
+.price-title {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 20px;
+    letter-spacing: 2px;
+    padding-bottom: 10px;
+}
+
+.price-advantages li{
+    list-style: none;
+  }
+
+  .price-advantages li:before {
+    content: '\f00c';
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: green;
+    padding-right: 10px;
+  }
+
+  .vip-li:before {
+    color: #fff !important;
+  }
+
+.price-button {
+    padding-top: 50px;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+}
+
+.normal-bg:hover {
+    background-color: #374daf;
+}
+
+.price-button a {
+    letter-spacing: 2px;
+    font-weight: 700;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #374daf;
+}
+
+.price-button a:hover {
+    color: #fff;
+    border-radius: 50px;
+}
+
